@@ -2,6 +2,7 @@
 Fri Mar  9 14:11:02 NOVT 2001
 max:
 * new string2addr()
+* routeMail, route, routeFile is "the same"
 
 ----- cvs ci ------
 Mon Mar  5 22:51:20 NOVT 2001
